--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -5,7 +5,7 @@
                 <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                     <div class="section-heading">
                         <h2>Menu</h2>
-                        <h3 class="subheading">March 2018</p>
+                        <h3 class="subheading">April 2018</p>
                     </div>
                 </div>
             </div>
@@ -14,106 +14,100 @@
                     <ul class="menu-list">
 
                         <li>
-                            <img src="/Menu-Images/2018-03/web_Orange Chicken.JPG" alt="Orange Chicken" class="menu-image"
-                            />
+                            <img src="/Menu-Images/2018-04/web_Chicken Flautas.JPG" alt="Chicken Flautas" class="menu-image" />
                             <div>
-                                <h4>Orange Chicken</h4>
-                                <p>My favorite Chinese meal. Lightly breaded chicken tossed with an orange sauce and served
-                                    with rice and veggies. (Stovetop)</p>
+                                <h4>Chicken Flautas</h4>
+                                <p>My favorite Mexican(ish) meal! Cheesy, seasoned chicken wrapped in flour tortillas and baked
+                                    or fried. (Crockpot then baked or fried)</p>
                             </div>
                         </li>
 
+
                         <li>
-                            <img src="/Menu-Images/2018-03/web_Bacon Wrapped Pork Chop.JPG" alt="Bacon Wrapped Pork Chops with Jalapeno Creamed Corn" class="menu-image"
-                            />
+                            <img src="/Menu-Images/2018-04/web_Cheesy Chicken and Rice.JPG" alt="Cheesy Chicken and Rice" class="menu-image" />
                             <div>
-                                <h4>Bacon Wrapped Pork Chops with Jalapeno Creamed Corn</h4>
-                                <p>Juicy pork chops wrapped in crispy bacon and served with homemade creamed corn. It is the
-                                    perfect Iowa farm meal! (Stovetop) </p>
+                                <h4>Cheesy Chicken and Rice</h4>
+                                <p>Delicious chicken, veggie and rice dish. A one pot dish that covers all the bases! (Stovetop)</p>
                             </div>
                         </li>
 
+
                         <li>
-                            <img src="/Menu-Images/2018-03/web_French onion soup.JPG" alt="French Onion Soup" class="menu-image"
-                            />
+                            <img src="/Menu-Images/2018-04/web_Red Pepper Chicken.JPG" alt="Red Pepper Chicken" class="menu-image" />
                             <div>
-                                <h4>French Onion Soup</h4>
-                                <p>Slow cooker caramelized onions cooked with beef broth. Top with croutons and Swiss cheese
-                                    for the perfect beefy, cheesy bite! (Slow Cooker)</p>
+                                <h4>Red Pepper Chicken</h4>
+                                <p>Garlicky chicken and veggies cooked all day in the crockpot. Your house will smell great!
+                                    Served with brown rice and veggies. (Slow cooker)</p>
                             </div>
                         </li>
 
+
                         <li>
-                            <img src="/Menu-Images/2018-03/web_Hot Sausage Sandwiches.JPG" alt="Hot Sausage Sandwiches" class="menu-image"
-                            />
+                            <img src="/Menu-Images/2018-04/web_Buffalo Pork Chops.JPG" alt="Buffalo Pork Chops" class="menu-image" />
                             <div>
-                                <h4>Hot Sausage Sandwiches</h4>
-                                <p>My favorite sandwich growing up! Italian sausage is cooked with veggies and tomatoes. Spoon
-                                    it on buns and top with mozzarella. Comes with veggies, buns and cheese. (Stovetop) </p>
+                                <h4>Buffalo Pork Chops</h4>
+                                <p>Pork chops marinated in buffalo wing sauce. The chops are seared then topped with sautéed
+                                    carrots, celery, onions and provolone and baked to melty perfection. (Stovetop and oven)</p>
                             </div>
                         </li>
 
-                        <li>
-                            <img src="/Menu-Images/2018-03/web_Ham and Broccoli Strata.JPG" alt="Ham and Broccoli Strata" class="menu-image"
-                            />
-                            <div>
-                                <h4>Ham and Broccoli Strata</h4>
-                                <p>Layers of flaky croissants, ham, broccoli and cheese. Once baked it is the perfect combination
-                                    of gooey cheese and crispy croissants. Perfect for breakfast or breakfast for dinner!
-                                    Can be made vegetarian. (Oven) </p>
-                            </div>
-                        </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-03/web_Spaghetti Stuffed Meatball.JPG" alt="Spaghetti Stuffed Meatball" class="menu-image"
-                            />
+                            <img src="/Menu-Images/2018-04/web_Teriyaki Pork.JPG" alt="Teriyaki Pork" class="menu-image" />
                             <div>
-                                <h4>Spaghetti Stuffed Meatball</h4>
-                                <p>The name says it all! Spaghetti and meatballs are turned inside out. It is a fun twist on
-                                    a classic meal. Served with bread and veggies. (Oven) </p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <img src="/Menu-Images/2018-03/web_Lomo Saltado.JPG" alt="Lomo Saltado" class="menu-image"
-                            />
-                            <div>
-                                <h4>Lomo Saltado</h4>
-                                <p>One of my favorite dishes from Peru! A delicious stir fry of beef, veggies, and potatoes.
-                                    Served over rice. Can be made vegetarian. (Stovetop)</p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <img src="/Menu-Images/2018-03/web_Cheeseburger Gnocchi.JPG" alt="Cheeseburger Gnocchi" class="menu-image"
-                            />
-                            <div>
-                                <h4>Cheeseburger Gnocchi</h4>
-                                <p>Cheeseburger pasta with potato dumplings. The best parts of a burger and fries without the
-                                    bun! Can be made vegetarian. (Stovetop)</p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <img src="/Menu-Images/2018-03/web_Quinoa Enchilada Bowls.JPG" alt="Quinoa Enchilada Bowls" class="menu-image"
-                            />
-                            <div>
-                                <h4>Quinoa Enchilada Bowls</h4>
-                                <p>Cheesy, veggie goodness in tasty enchilada sauce. Perfect for Meatless Monday or Taco Tuesday!
-                                    (Vegetarian) (Slow Cooker)</p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <img src="/Menu-Images/2018-03/web_Ginger Peach Chicken.JPG" alt="Ginger Peach Chicken" class="menu-image"
-                            />
-                            <div>
-                                <h4>Ginger Peach Chicken</h4>
-                                <p>Juicy chicken and peaches slow cooked to perfection. Served with rice and veggies. (Slow
-                                    Cooker)
+                                <h4>Teriyaki Pork</h4>
+                                <p>Pork cooked with veggies and pineapple in a homemade teriyaki sauce. Comes with rice. (Slow
+                                    cooker)
                                 </p>
                             </div>
                         </li>
+
+
+                        <li>
+                            <img src="/Menu-Images/2018-04/web_Carnitas.JPG" alt="Carnitas" class="menu-image" />
+                            <div>
+                                <h4>Carnitas</h4>
+                                <p>Slow cooked deliciousness is the best way to describe thee amazing tacos. Pork is slow cooked
+                                    all day then broiled or pan fried to get crispy edges. My favorite way to make tacos!
+                                    (Slow cooker then oven or stovetop)</p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <img src="/Menu-Images/2018-04/web_Sriracha and Cheddar Juicy Lucy.JPG" alt="Sriracha and Cheddar Juicy Lucy" class="menu-image" />
+                            <div>
+                                <h4>Sriracha and Cheddar Juicy Lucy</h4>
+                                <p>Cheddar stuffed burgers with a little (optional) kick. Comes with buns and veggies. (Grilled
+                                    or stovetop)</p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <img src="/Menu-Images/2018-04/web_Italian Beef Sandwiches.JPG" alt="Italian Beef Sandwiches" class="menu-image" />
+                            <div>
+                                <h4>Italian Beef Sandwiches</h4>
+                                <p>My take on a Chicago favorite. Slow cooked beef is made into amazing sandwiches. Comes with
+                                    rolls and veggies. (Slow cooker)</p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <img src="/Menu-Images/2018-04/web_Ribollita.JPG" alt="Ribollita" class="menu-image" />
+                            <div>
+                                <h4>Ribollita</h4>
+                                <p>A hearty Italian white bean soup. Perfect for a crisp spring evening. (Slow cooker or stovetop)</p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <img src="/Menu-Images/2018-04/web_Sweet Potato and Chickpea Curry.JPG" alt="Sweet Potato and Chickpea Curry" class="menu-image" />
+                            <div>
+                                <h4>Sweet Potato and Chickpea Curry</h4>
+                                <p>An amazing vegetarian curry finished with fresh spinach and coconut milk. Comes with rice.
+                                    (Slow cooker)</p>
+                            </div>
+                        </li>
+
                     </ul>
                 </div>
             </div>
