--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -5,7 +5,7 @@
                 <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                     <div class="section-heading">
                         <h2>Menu</h2>
-                        <h3 class="subheading">April 2018</p>
+                        <h3 class="subheading">May 2018</p>
                     </div>
                 </div>
             </div>
@@ -14,97 +14,87 @@
                     <ul class="menu-list">
 
                         <li>
-                            <img src="/Menu-Images/2018-04/web_Chicken Flautas.JPG" alt="Chicken Flautas" class="menu-image" />
+                            <img src="/Menu-Images/2018-05/web_Chicken Burrito Bowls.JPG" alt="Chicken Burrito Bowls" class="menu-image" />
                             <div>
-                                <h4>Chicken Flautas</h4>
-                                <p>My favorite Mexican(ish) meal! Cheesy, seasoned chicken wrapped in flour tortillas and baked
-                                    or fried. (Crockpot then baked or fried)</p>
-                            </div>
-                        </li>
-
-
-                        <li>
-                            <img src="/Menu-Images/2018-04/web_Cheesy Chicken and Rice.JPG" alt="Cheesy Chicken and Rice" class="menu-image" />
-                            <div>
-                                <h4>Cheesy Chicken and Rice</h4>
-                                <p>Delicious chicken, veggie and rice dish. A one pot dish that covers all the bases! (Stovetop)</p>
-                            </div>
-                        </li>
-
-
-                        <li>
-                            <img src="/Menu-Images/2018-04/web_Red Pepper Chicken.JPG" alt="Red Pepper Chicken" class="menu-image" />
-                            <div>
-                                <h4>Red Pepper Chicken</h4>
-                                <p>Garlicky chicken and veggies cooked all day in the crockpot. Your house will smell great!
-                                    Served with brown rice and veggies. (Slow cooker)</p>
-                            </div>
-                        </li>
-
-
-                        <li>
-                            <img src="/Menu-Images/2018-04/web_Buffalo Pork Chops.JPG" alt="Buffalo Pork Chops" class="menu-image" />
-                            <div>
-                                <h4>Buffalo Pork Chops</h4>
-                                <p>Pork chops marinated in buffalo wing sauce. The chops are seared then topped with sautéed
-                                    carrots, celery, onions and provolone and baked to melty perfection. (Stovetop and oven)</p>
-                            </div>
-                        </li>
-
-
-                        <li>
-                            <img src="/Menu-Images/2018-04/web_Teriyaki Pork.JPG" alt="Teriyaki Pork" class="menu-image" />
-                            <div>
-                                <h4>Teriyaki Pork</h4>
-                                <p>Pork cooked with veggies and pineapple in a homemade teriyaki sauce. Comes with rice. (Slow
-                                    cooker)
-                                </p>
-                            </div>
-                        </li>
-
-
-                        <li>
-                            <img src="/Menu-Images/2018-04/web_Carnitas.JPG" alt="Carnitas" class="menu-image" />
-                            <div>
-                                <h4>Carnitas</h4>
-                                <p>Slow cooked deliciousness is the best way to describe thee amazing tacos. Pork is slow cooked
-                                    all day then broiled or pan fried to get crispy edges. My favorite way to make tacos!
-                                    (Slow cooker then oven or stovetop)</p>
+                                <h4>Chicken Burrito Bowls</h4>
+                                <p>Shredded chicken and veggies top rice for a quick and delicious dinner. (Slow Cooker)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-04/web_Sriracha and Cheddar Juicy Lucy.JPG" alt="Sriracha and Cheddar Juicy Lucy" class="menu-image" />
+                            <img src="/Menu-Images/2018-05/web_Honey Chicken Tenders.JPG" alt="Honey Chicken Tenders" class="menu-image" />
                             <div>
-                                <h4>Sriracha and Cheddar Juicy Lucy</h4>
-                                <p>Cheddar stuffed burgers with a little (optional) kick. Comes with buns and veggies. (Grilled
-                                    or stovetop)</p>
+                                <h4>Honey Chicken Tenders</h4>
+                                <p>Sweet chicken tenders baked to perfection. Comes with veggies. (Oven)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-04/web_Italian Beef Sandwiches.JPG" alt="Italian Beef Sandwiches" class="menu-image" />
+                            <img src="/Menu-Images/2018-05/web_Mediterranean Turkey Burger.JPG" alt="Mediterranean Turkey Burger" class="menu-image" />
                             <div>
-                                <h4>Italian Beef Sandwiches</h4>
-                                <p>My take on a Chicago favorite. Slow cooked beef is made into amazing sandwiches. Comes with
-                                    rolls and veggies. (Slow cooker)</p>
+                                <h4>Mediterranean Turkey Burger</h4>
+                                <p>Juicy turkey burger mixed with spinach, sun dried tomatoes, and feta. Comes with buns and
+                                    veggies. (Grill or stovetop)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-04/web_Ribollita.JPG" alt="Ribollita" class="menu-image" />
+                            <img src="/Menu-Images/2018-05/web_Balsamic Honey Pulled Pork.JPG" alt="Balsamic Honey Pulled Pork" class="menu-image" />
                             <div>
-                                <h4>Ribollita</h4>
-                                <p>A hearty Italian white bean soup. Perfect for a crisp spring evening. (Slow cooker or stovetop)</p>
+                                <h4>Balsamic Honey Pulled Pork</h4>
+                                <p>Pulled pork mixed with a sweet and tangy bbq sauce. Comes with rolls and veggies. (Slow cooker)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-04/web_Sweet Potato and Chickpea Curry.JPG" alt="Sweet Potato and Chickpea Curry" class="menu-image" />
+                            <img src="/Menu-Images/2018-05/web_Jalapeno Pineapple Pork Tacos.JPG" alt="Jalapeno Pineapple Pork Tacos" class="menu-image" />
                             <div>
-                                <h4>Sweet Potato and Chickpea Curry</h4>
-                                <p>An amazing vegetarian curry finished with fresh spinach and coconut milk. Comes with rice.
-                                    (Slow cooker)</p>
+                                <h4>Jalapeno Pineapple Pork Tacos</h4>
+                                <p>Sweet and spicy pork tacos. Fresh flavors ready when you need it! Comes with corn tortillas
+                                    and cheese. (Slow cooker)</p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <img src="/Menu-Images/2018-05/web_Italian Pork Roast.JPG" alt="Italian Pork Roast" class="menu-image" />
+                            <div>
+                                <h4>Italian Pork Roast</h4>
+                                <p>Pork roast slow cooked with herbs and tomatoes. Smells amazing and tastes great! Served with
+                                    green beans. (Crockpot)</p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <img src="/Menu-Images/2018-05/web_Pizza Burgers.JPG" alt="Pizza Burgers" class="menu-image" />
+                            <div>
+                                <h4>Pizza Burgers</h4>
+                                <p>Homemade burgers that are good either grilled or pan cooked. Topped with mozzarella, pepperoni,
+                                    and marinara. Comes with buns and veggies. (Grilled or stovetop)</p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <img src="/Menu-Images/2018-05/web_Philly Stuffed Peppers.JPG" alt="Philly Stuffed Peppers" class="menu-image" />
+                            <div>
+                                <h4>Philly Stuffed Peppers</h4>
+                                <p>Bell peppers stuffed with beef and onions then topped with provolone. (Stovetop then Bake)</p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <img src="/Menu-Images/2018-05/web_Creamy Mozzarella Tomato Tortellini.JPG" alt="Creamy Mozzarella Tomato Tortellini" class="menu-image" />
+                            <div>
+                                <h4>Creamy Mozzarella Tomato Tortellini</h4>
+                                <p>Creamy, veggie loaded pasta sauce with tortellini. A quick meal for a busy night. (Stovetop)</p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <img src="/Menu-Images/2018-05/web_Baked Denver Omelet.JPG" alt="Baked Denver Omelet" class="menu-image" />
+                            <div>
+                                <h4>Baked Denver Omelet</h4>
+                                <p>A great breakfast or dinner choice! Ham, veggies and cheese topped with eggs and baked until
+                                    golden brown and delicious! (Oven)</p>
                             </div>
                         </li>
 
