--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -5,7 +5,7 @@
                 <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                     <div class="section-heading">
                         <h2>Menu</h2>
-                        <h3 class="subheading">May 2018</p>
+                        <h3 class="subheading">June 2018</p>
                     </div>
                 </div>
             </div>
@@ -14,89 +14,84 @@
                     <ul class="menu-list">
 
                         <li>
-                            <img src="/Menu-Images/2018-05/web_Chicken Burrito Bowls.JPG" alt="Chicken Burrito Bowls" class="menu-image" />
+                            <img src="/Menu-Images/2018-06/web_Limoncello Chicken.JPG" alt="Limoncello Chicken" class="menu-image" />
                             <div>
-                                <h4>Chicken Burrito Bowls</h4>
-                                <p>Shredded chicken and veggies top rice for a quick and delicious dinner. (Slow Cooker)</p>
+                                <h4>Limoncello Chicken</h4>
+                                <p>Herby, garlicky, lemony grilled chicken and onions. Served with veggies. (Grilled)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-05/web_Honey Chicken Tenders.JPG" alt="Honey Chicken Tenders" class="menu-image" />
+                            <img src="/Menu-Images/2018-06/web_Turkey Pesto Burger.JPG" alt="Turkey Pesto Burger " class="menu-image" />
                             <div>
-                                <h4>Honey Chicken Tenders</h4>
-                                <p>Sweet chicken tenders baked to perfection. Comes with veggies. (Oven)</p>
+                                <h4>Turkey Pesto Burger </h4>
+                                <p>Mix together turkey and pesto for a juicy, flavorful burger.  Served with fresh mozzarella, buns and veggies.  (Grilled)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-05/web_Mediterranean Turkey Burger.JPG" alt="Mediterranean Turkey Burger" class="menu-image" />
+                            <img src="/Menu-Images/2018-06/web_Chicken Fajitas.JPG" alt="Chicken Fajitas" class="menu-image" />
                             <div>
-                                <h4>Mediterranean Turkey Burger</h4>
-                                <p>Juicy turkey burger mixed with spinach, sun dried tomatoes, and feta. Comes with buns and
-                                    veggies. (Grill or stovetop)</p>
+                                <h4>Chicken Fajitas</h4>
+                                <p>Chicken marinated in fresh squeezed juices and seasonings then grilled with peppers and onions for the best fajitas! Comes with tortillas. (Grilled)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-05/web_Balsamic Honey Pulled Pork.JPG" alt="Balsamic Honey Pulled Pork" class="menu-image" />
+                            <img src="/Menu-Images/2018-06/web_Chicken Fried Cauli-Rice.JPG" alt="Chicken Fried Cauli-rice" class="menu-image" />
                             <div>
-                                <h4>Balsamic Honey Pulled Pork</h4>
-                                <p>Pulled pork mixed with a sweet and tangy bbq sauce. Comes with rolls and veggies. (Slow cooker)</p>
+                                <h4>Chicken Fried Cauli-rice</h4>
+                                <p>Get extra veggies in this tasty take on fried rice. (Stovetop)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-05/web_Jalapeno Pineapple Pork Tacos.JPG" alt="Jalapeno Pineapple Pork Tacos" class="menu-image" />
+                            <img src="/Menu-Images/2018-06/web_Asian Beef Tacos.JPG" alt="Asian Beef Tacos" class="menu-image" />
                             <div>
-                                <h4>Jalapeno Pineapple Pork Tacos</h4>
-                                <p>Sweet and spicy pork tacos. Fresh flavors ready when you need it! Comes with corn tortillas
-                                    and cheese. (Slow cooker)</p>
+                                <h4>Asian Beef Tacos</h4>
+                                <p>Flank steak marinated in soy sauce, honey, ginger and herbs then slow cooked all day.  Served with tortillas.  (Crock pot)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-05/web_Italian Pork Roast.JPG" alt="Italian Pork Roast" class="menu-image" />
+                            <img src="/Menu-Images/2018-06/web_Mozzarella Stuffed Meatball Burger.JPG" alt="Mozzarella Stuffed Meatball Burgers" class="menu-image" />
                             <div>
-                                <h4>Italian Pork Roast</h4>
-                                <p>Pork roast slow cooked with herbs and tomatoes. Smells amazing and tastes great! Served with
-                                    green beans. (Crockpot)</p>
+                                <h4>Mozzarella Stuffed Meatball Burgers</h4>
+                                <p>Beef and Italian sausage burger seasoned and stuffed with mozzarella.  Comes with marinara, awesome bread, and veggies.</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-05/web_Pizza Burgers.JPG" alt="Pizza Burgers" class="menu-image" />
+                            <img src="/Menu-Images/2018-06/web_Puerto Rican Shredded Pork with Black Beans.JPG" alt="Puerto Rican Shredded Pork with Black Beans" class="menu-image" />
                             <div>
-                                <h4>Pizza Burgers</h4>
-                                <p>Homemade burgers that are good either grilled or pan cooked. Topped with mozzarella, pepperoni,
-                                    and marinara. Comes with buns and veggies. (Grilled or stovetop)</p>
+                                <h4>Puerto Rican Shredded Pork with Black Beans</h4>
+                                <p>Juicy, citrus marinated pork served with corn tortillas and black beans. (Crockpot)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-05/web_Philly Stuffed Peppers.JPG" alt="Philly Stuffed Peppers" class="menu-image" />
+                            <img src="/Menu-Images/2018-06/web_Garlic Ginger Pork.JPG" alt="Garlic Ginger Pork" class="menu-image" />
                             <div>
-                                <h4>Philly Stuffed Peppers</h4>
-                                <p>Bell peppers stuffed with beef and onions then topped with provolone. (Stovetop then Bake)</p>
+                                <h4>Garlic Ginger Pork</h4>
+                                <p>Seasoned pork strips cooked in a sweet and spicy sauce. Served with seasoned roasted broccoli. (Stovetop)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-05/web_Creamy Mozzarella Tomato Tortellini.JPG" alt="Creamy Mozzarella Tomato Tortellini" class="menu-image" />
+                            <img src="/Menu-Images/2018-06/web_Pork Egg Roll Bowl.JPG" alt="Pork Egg Roll Bowl" class="menu-image" />
                             <div>
-                                <h4>Creamy Mozzarella Tomato Tortellini</h4>
-                                <p>Creamy, veggie loaded pasta sauce with tortellini. A quick meal for a busy night. (Stovetop)</p>
+                                <h4>Pork Egg Roll Bowl</h4>
+                                <p>All the best parts of eggrolls and none of the mess! Ground pork and veggies topped with crispy wonton strips. (Stovetop)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-05/web_Baked Denver Omelet.JPG" alt="Baked Denver Omelet" class="menu-image" />
+                            <img src="/Menu-Images/2018-06/web_Veggie Loaded Black Beans and Rice.JPG" alt="Veggie Loaded Black Beans and Rice" class="menu-image" />
                             <div>
-                                <h4>Baked Denver Omelet</h4>
-                                <p>A great breakfast or dinner choice! Ham, veggies and cheese topped with eggs and baked until
-                                    golden brown and delicious! (Oven)</p>
+                                <h4>Veggie Loaded Black Beans and Rice</h4>
+                                <p>Black beans and rice like you have never had them before! It is a great vegetarian meal. (Stovetop)</p>
                             </div>
-                        </li>
+                        </li>                        
 
                     </ul>
                 </div>
