--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -14,84 +14,84 @@
                     <ul class="menu-list">
 
                         <li>
-                            <img src="/Menu-Images/2018-06/web_Limoncello Chicken.JPG" alt="Limoncello Chicken" class="menu-image" />
+                            <img src="/Menu-Images/2018-07/web_Cheddar Bacon Ranch Burgers.JPG" alt="Cheddar Bacon Ranch Burgers" class="menu-image" />
                             <div>
-                                <h4>Limoncello Chicken</h4>
-                                <p>Herby, garlicky, lemony grilled chicken and onions. Served with veggies. (Grilled)</p>
+                                <h4>Cheddar Bacon Ranch Burgers</h4>
+                                <p>Mix bacon, cheddar and ranch into beef to create the juiciest burgers! Comes with buns and veggies. (Grill)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-06/web_Turkey Pesto Burger.JPG" alt="Turkey Pesto Burger " class="menu-image" />
+                            <img src="/Menu-Images/2018-07/web_Broccoli Beef.JPG" alt="Broccoli Beef" class="menu-image" />
                             <div>
-                                <h4>Turkey Pesto Burger </h4>
-                                <p>Mix together turkey and pesto for a juicy, flavorful burger.  Served with fresh mozzarella, buns and veggies.  (Grilled)</p>
+                                <h4>Broccoli Beef</h4>
+                                <p>Beef cooked in a savory sauce. Served with broccoli and rice. (Stovetop)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-06/web_Chicken Fajitas.JPG" alt="Chicken Fajitas" class="menu-image" />
+                            <img src="/Menu-Images/2018-07/web_Lemon Pesto Chicken.JPG" alt="Lemon Pesto Chicken" class="menu-image" />
                             <div>
-                                <h4>Chicken Fajitas</h4>
-                                <p>Chicken marinated in fresh squeezed juices and seasonings then grilled with peppers and onions for the best fajitas! Comes with tortillas. (Grilled)</p>
+                                <h4>Lemon Pesto Chicken</h4>
+                                <p>Chicken marinated in the bright flavors of summer! Comes with veggies. (Grilled)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-06/web_Chicken Fried Cauli-Rice.JPG" alt="Chicken Fried Cauli-rice" class="menu-image" />
+                            <img src="/Menu-Images/2018-07/web_Firecracker Chicken.JPG" alt="Firecracker Chicken" class="menu-image" />
                             <div>
-                                <h4>Chicken Fried Cauli-rice</h4>
-                                <p>Get extra veggies in this tasty take on fried rice. (Stovetop)</p>
+                                <h4>Firecracker Chicken</h4>
+                                <p>Wake up your taste buds with bite size chicken in a spicy sauce. Comes with veggies. (Stovetop)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-06/web_Asian Beef Tacos.JPG" alt="Asian Beef Tacos" class="menu-image" />
+                            <img src="/Menu-Images/2018-07/web_Western Chicken Burger.JPG" alt="Western Chicken Burger" class="menu-image" />
                             <div>
-                                <h4>Asian Beef Tacos</h4>
-                                <p>Flank steak marinated in soy sauce, honey, ginger and herbs then slow cooked all day.  Served with tortillas.  (Crock pot)</p>
+                                <h4>Western Chicken Burger</h4>
+                                <p>Chicken mixed with cheddar, jalapeno, and bacon. Comes with veggies and buns.</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-06/web_Mozzarella Stuffed Meatball Burger.JPG" alt="Mozzarella Stuffed Meatball Burgers" class="menu-image" />
+                            <img src="/Menu-Images/2018-07/web_Pork Chops with Blueberry Bourbon BBQ Sauce.JPG" alt="Pork Chops with Blueberry Bourbon BBQ Sauce" class="menu-image" />
                             <div>
-                                <h4>Mozzarella Stuffed Meatball Burgers</h4>
-                                <p>Beef and Italian sausage burger seasoned and stuffed with mozzarella.  Comes with marinara, awesome bread, and veggies.</p>
+                                <h4>Pork Chops with Blueberry Bourbon BBQ Sauce</h4>
+                                <p>The most amazing BBQ sauce ever! I serve it with everything, but it is especially tasty with grilled pork chops. Comes with veggies. (Grilled and stovetop)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-06/web_Puerto Rican Shredded Pork with Black Beans.JPG" alt="Puerto Rican Shredded Pork with Black Beans" class="menu-image" />
+                            <img src="/Menu-Images/2018-07/web_Chile Rubbed Pork Chops with Black Bean Salad.JPG" alt="Chile Rubbed Pork Chops with Black Bean Salad" class="menu-image" />
                             <div>
-                                <h4>Puerto Rican Shredded Pork with Black Beans</h4>
-                                <p>Juicy, citrus marinated pork served with corn tortillas and black beans. (Crockpot)</p>
+                                <h4>Chile Rubbed Pork Chops with Black Bean Salad</h4>
+                                <p>Grilled, spiced pork chops served with a grilled veggie salad. (Grill)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-06/web_Garlic Ginger Pork.JPG" alt="Garlic Ginger Pork" class="menu-image" />
+                            <img src="/Menu-Images/2018-07/web_Tacos al Pastor.JPG" alt="Tacos al Pastor" class="menu-image" />
                             <div>
-                                <h4>Garlic Ginger Pork</h4>
-                                <p>Seasoned pork strips cooked in a sweet and spicy sauce. Served with seasoned roasted broccoli. (Stovetop)</p>
+                                <h4>Tacos al Pastor</h4>
+                                <p>Tender pork slow cooked for the perfect tacos. Comes with tortillas. (Slow cooker)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-06/web_Pork Egg Roll Bowl.JPG" alt="Pork Egg Roll Bowl" class="menu-image" />
+                            <img src="/Menu-Images/2018-07/web_Ranch Pork Chops.JPG" alt="Ranch Pork Chops" class="menu-image" />
                             <div>
-                                <h4>Pork Egg Roll Bowl</h4>
-                                <p>All the best parts of eggrolls and none of the mess! Ground pork and veggies topped with crispy wonton strips. (Stovetop)</p>
+                                <h4>Ranch Pork Chops</h4>
+                                <p>Seasoned pork chops grilled to perfection. Served with veggies. (Grilled)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-06/web_Veggie Loaded Black Beans and Rice.JPG" alt="Veggie Loaded Black Beans and Rice" class="menu-image" />
+                            <img src="/Menu-Images/2018-07/web_Cheddar Stuffed Bacon Wrapped Hot Dogs.JPG" alt="Cheddar Stuffed, Bacon Wrapped Hot Dogs" class="menu-image" />
                             <div>
-                                <h4>Veggie Loaded Black Beans and Rice</h4>
-                                <p>Black beans and rice like you have never had them before! It is a great vegetarian meal. (Stovetop)</p>
+                                <h4>Cheddar Stuffed, Bacon Wrapped Hot Dogs</h4>
+                                <p>Go all out with a gourmet dog! Comes with buns and veggies. (Grilled)</p>
                             </div>
-                        </li>                        
+                        </li>
 
                     </ul>
                 </div>
