Corrected image file names

--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -32,7 +32,7 @@
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Pork, Corn, and Zucchini Enchiladas.JPG" alt="Pork, Corn, and Zucchini Enchiladas" class="menu-image" />
+                            <img src="/Menu-Images/2018-08/web_Pork Corn Zucchini Enchiladas.JPG" alt="Pork, Corn, and Zucchini Enchiladas" class="menu-image" />
                             <div>
                                 <h4>Pork, Corn, and Zucchini Enchiladas</h4>
                                 <p>Pork and veggies slow cooked to create a delicious enchilada filling. Then fill tortillas
@@ -60,9 +60,9 @@
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Salsa Verde Chicken.JPG" alt="Salsa Verde Chicken" class="menu-image" />
+                            <img src="/Menu-Images/2018-08/web_Salsa Verde Chicken Tacos.JPG" alt="Salsa Verde Chicken Tacos" class="menu-image" />
                             <div>
-                                <h4>Salsa Verde Chicken</h4>
+                                <h4>Salsa Verde Chicken Tacos</h4>
                                 <p>Slow cooked chicken with salsa verde. Served in corn tortillas. Soon to become a Taco Tuesday
                                     favorite! (Slow cooker) </p>
                             </div>
@@ -103,9 +103,9 @@
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Three Sister Enchilada Bowls.JPG" alt="Three Sister Enchilada Bowls" class="menu-image" />
+                            <img src="/Menu-Images/2018-08/web_Three Sisters Enchilada Bowls.JPG" alt="Three Sisters Enchilada Bowls" class="menu-image" />
                             <div>
-                                <h4>Three Sister Enchilada Bowls</h4>
+                                <h4>Three Sisters Enchilada Bowls</h4>
                                 <p>Squash, beans and corn fill this amazing enchilada bowl! (Stovetop)</p>
                             </div>
                         </li>
